Généricité correction